# audio_analyser

./: AudioReader.cpp  AudioReader.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  WaveformWidget.cpp  WaveformWidget.h  main.cpp
